# linera-alphabot

./: .dockerignore  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  compose.yaml  run.bash  setup-env.sh  test-service.sh
bot-service/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  E2E_TESTING_GUIDE.md  README.md  STRATEGY_GUIDE.md  package.json  pnpm-lock.yaml  test-fetcher.ts  test-integration.ts  test-linera-simple.ts  test-strategy.ts  tsconfig.json  vitest.config.ts
bot-service/src/: main.ts
contracts/: CHEATSHEET.md  Cargo.toml  GRAPHQL_QUERIES.md  LOCAL_WALLET_SETUP.md  NETWORK_CHECK.md  NETWORK_SETUP.md  QUICKSTART.md  README.md  STATUS.md  TEST.md  TEST_SUMMARY.md  UPDATES.md  VERIFY_DEPLOYMENT.md
contracts/.cargo/: config.toml
contracts/bot-state/: Cargo.toml  linera.toml
contracts/bot-state/src/: contract.rs  lib.rs  operation.rs  service.rs  state.rs
contracts/bot-state/tests/: unit_tests.rs
docs/: TESTNET_DEPLOYMENT.md  architecture.md
external-service-mirror/: .env.example  Dockerfile  README.md  package.json  pnpm-lock.yaml
external-service-mirror/src/: main.ts  server.ts
frontend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  package.json  pnpm-lock.yaml
frontend/app/: page.tsx
frontend/components/: BotCard.tsx
frontend/lib/: conversions.ts
frontend/types/: index.ts
infra/: README.md
infra/localnet/: check-network.sh  env.sh
infra/scripts/: start-network-with-http.sh
scheduler/: .env.example  Dockerfile  package.json  pnpm-lock.yaml
scheduler/src/: index.ts
(+24 files in other folders)
