[workspace]
members = ["bot-state"]
resolver = "2"

[workspace.dependencies]
linera-sdk = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
codegen-units = 1
